# narvi

./: .gitignore  README.md  demo.py  pyproject.toml  requirements.txt  start.cmd  start.ps1
.github/workflows/: ci.yml
backend/: conftest.py  pyproject.toml
backend/app/: config.py  db.py  deps.py  engine.py  main.py  models.py
backend/app/api/: basemap.py  export.py  generate.py  health.py  parcels.py  scenarios.py  tiles.py  warehouse.py
backend/tests/: test_api.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  MapView.tsx  export.ts  index.css  store.ts
frontend/src/api/: client.ts
frontend/src/map/: formations.ts  gridLayers.ts  pdpLayers.ts  scenarioLayers.ts
frontend/src/panels/: CuratePanel.tsx  GunBarrel.tsx  LayerToggle.tsx  ParamsPanel.tsx  PlanPanel.tsx  ScenarioBar.tsx
sql/: 01_scenario.sql
src/narvi/: __init__.py  feasibility.py  forecast.py  generate.py  parcel.py  persist.py  placement.py  records.py  shp_export.py  viz.py  warehouse.py
tests/: test_feasibility.py  test_gunbarrel_convention.py  test_handoff.py  test_parcel_ingest.py  test_persist.py  test_placement.py  test_shp_export.py  test_viz.py  test_warehouse_pure.py
